# Laboratorio1

./: CMakeLists.txt  DTFecha.cpp  DTFecha.h  DTinfoEstudiante.cpp  DTinfoEstudiante.h  Estudiante.cpp  Estudiante.h  Informacion.cpp  Informacion.h  Libro.cpp  Libro.h  PaginaWeb.cpp  PaginaWeb.h  chatGPT.cpp  chatGPT.h  main.cpp
